--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mahoraga"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 description = "A terminal-based prompt validation and improvement tool"
 authors = ["Mahoraga Contributors"]
@@ -13,7 +13,7 @@ categories = ["command-line-utilities"]
 ratatui = "0.29"
 crossterm = "0.28"
 tokio = { version = "1", features = ["full"] }
-reqwest = { version = "0.12", features = ["json"] }
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
 clap = { version = "4", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
